Dima added change in test

--- a/test/index.html
+++ b/test/index.html
@@ -10,15 +10,26 @@
 	<div class="header"></div>
 	<div class="content">
 		<ul>
-	  		<li><a href="default.php">пункт</a></li>
-	 		 <li><a href="news.php">пункт</a></li>
-	  		<li><a href="contact.php">пункт</a></li>
-	  		<li><a href="about.php">пункт</a></li>
+	  		<li><a href="#">пункт</a></li>
+	 		 <li><a href="#">пункт</a></li>
+	  		<li><a href="#">пункт</a></li>
+	  		<li><a href="#">пункт</a></li>
 		</ul>
-		<div class="block"></div>
+		<div class="block">
+			<div class="head"><p>Статьи</p></div>
+			<div class="stat">
+				<div class="name">Название</div>
+				<div class="text"></div>
+			</div>
+			<div class="stat">
+				<div class="name">Название</div>
+				<div class="text"></div>
+			</div>
+			
+		</div>
 		<div class="block"></div>
 		<div class="block"></div>
 	</div>
-	<div class="header"></div>
+	<div class="footer"></div>
 </body>
 </html>
