--- a/test/index.html
+++ b/test/index.html
@@ -3,33 +3,84 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>test</title>
+	<title>Образовательный ресурс</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="header"></div>
 	<div class="content">
-		<ul>
-	  		<li><a href="#">пункт</a></li>
-	 		 <li><a href="#">пункт</a></li>
-	  		<li><a href="#">пункт</a></li>
-	  		<li><a href="#">пункт</a></li>
-		</ul>
-		<div class="block">
-			<div class="head"><p>Статьи</p></div>
-			<div class="stat">
-				<div class="name">Название</div>
-				<div class="text"></div>
+		<header>
+			<div class="header">
+				<img src="Source/img/Logo_tvgu_header.png" alt="Лого">
+				<h1>Образовательный ресурс</h1>
+				<div class="login">
+					<a href="#">Вход</a>
+					<a href="#">Регистрация</a>
+				</div>
 			</div>
-			<div class="stat">
-				<div class="name">Название</div>
-				<div class="text"></div>
+		</header>
+		<nav>
+				<form action="" method="get">
+					<input class="search" name="s" type="search">
+				</form>
+			<ul>
+				<li><a href="#">Статьи</a></li>
+				<li><a href="#">НПА</a></li>
+				<li><a href="#">Лекции</a></li>
+				<li><a href="#">Файлы</a></li>
+			</ul>
+		</nav>
+		<section>
+			<div class="block">
+				<div class="block-header">
+					<h2>Статьи</h2>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Автор: Имя</p>
+					</div>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Автор: Имя</p>
+					</div>
+				</div>
 			</div>
-			
-		</div>
-		<div class="block"></div>
-		<div class="block"></div>
+		</section>
+		<section>
+			<div class="block"></div>
+		</section>
+		<section>
+			<div class="block"></div>
+		</section>
+		<footer>
+			<div class="footer"></div>
+		</footer>
 	</div>
-	<div class="footer"></div>
 </body>
 </html>
