Dima change prototype

--- a/test/index.html
+++ b/test/index.html
@@ -73,10 +73,90 @@
 			</div>
 		</section>
 		<section>
-			<div class="block"></div>
+			<div class="block">
+				<div class="block-header">
+					<h2>Лекции</h2>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Преподаватель: ФИО</p>
+					</div>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Преподаватель: ФИО</p>
+					</div>
+				</div>
+			</div>
 		</section>
 		<section>
-			<div class="block"></div>
+			<div class="block">
+				<div class="block-header">
+					<h2>Файлы</h2>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Добавил: Имя</p>
+					</div>
+				</div>
+				<div class="block-content">
+					<div class="block-content-header">
+						<h3>Название</h3>
+					</div>
+					<div class="block-content-description">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Добавил: Имя</p>
+					</div>
+				</div>
+			</div>
 		</section>
 		<footer>
 			<div class="footer"></div>
