Dima change prototype

--- a/test/index.html
+++ b/test/index.html
@@ -159,7 +159,12 @@
 			</div>
 		</section>
 		<footer>
-			<div class="footer"></div>
+			<div class="footer">
+				<img src="Source/img/Logo_tvgu_footer.png" alt="лого">
+				<div class="link">
+					<a href="#">Сайт Математического факульта ТвГУ</a>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
