Dima add prototype web-site

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
 					<input class="search" name="s" type="search">
 				</form>
 			<ul>
-				<li><a href="#">Статьи</a></li>
+				<li class="li"><a href="#">Статьи</a></li>
 				<li><a href="#">НПА</a></li>
 				<li><a href="#">Лекции</a></li>
 				<li><a href="#">Файлы</a></li>
@@ -36,7 +36,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -54,7 +54,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -79,7 +79,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -97,7 +97,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -122,7 +122,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -140,7 +140,7 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<h3>Название</h3>
+						<a href="#"><h3>Название</h3></a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -162,7 +162,7 @@
 			<div class="footer">
 				<img src="Source/img/Logo_tvgu_footer.png" alt="лого">
 				<div class="link">
-					<a href="#">Сайт Математического факульта ТвГУ</a>
+					<a href="https://math.tversu.ru/" target="_blank">Сайт Математического факульта ТвГУ</a>
 				</div>
 			</div>
 		</footer>
