--- a/project/NPAs_page.html
+++ b/project/NPAs_page.html
@@ -33,6 +33,124 @@
 		</nav>
 
 		<!-- Тут ваш код -->
+		<section>
+			<div class="block_full">
+				
+				<div class="block-header_full">
+					<h2>Нормативно-правовые акты</h2>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Название Органа</p>
+					</div>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Название Органа</p>
+					</div>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Название Органа</p>
+					</div>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Название Органа</p>
+					</div>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-author">
+							<p>Название Органа</p>
+					</div>
+				</div>
+				<div class="block-content_full">
+					<div class="block-content-header">
+						<a href="#"><h3>Название</h3></a>
+					</div>
+					<div class="block-content-description_full">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Ut enim ad minim veniam, 
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+							eu fugiat nulla pariatur.
+						</p>
+					</div>
+					<div class="block-content-organ">
+							<p>Название Органа</p>
+					</div>
+				</div>
+
+
+
+		</section>
 
 		<footer>
 			<div class="footer">
