--- a/project/NPAs_page.html
+++ b/project/NPAs_page.html
@@ -34,16 +34,16 @@
 
 		<!-- Тут ваш код -->
 		<section>
-			<div class="block_full">
+			<div class="block block_full">
 				
-				<div class="block-header_full">
+				<div class="block-header block-header_full">
 					<h2>Нормативно-правовые акты</h2>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -57,11 +57,11 @@
 							<p>Название Органа</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -75,11 +75,11 @@
 							<p>Название Органа</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -93,11 +93,11 @@
 							<p>Название Органа</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -111,11 +111,11 @@
 							<p>Название Органа</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -129,11 +129,11 @@
 							<p>Название Органа</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -143,7 +143,7 @@
 							eu fugiat nulla pariatur.
 						</p>
 					</div>
-					<div class="block-content-organ">
+					<div class="block-content-author">
 							<p>Название Органа</p>
 					</div>
 				</div>
