--- a/project/articles_page.html
+++ b/project/articles_page.html
@@ -33,18 +33,17 @@
 		</nav>
 
 		<!-- Тут ваш код -->
-		
-		<section>
-			<div class="block_full">
 
-				<div class="block-header_full">
+		<section>
+			<div class="block block_full">
+				<div class="block-header block-header_full">
 					<h2>Статьи</h2>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -58,11 +57,11 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -76,11 +75,11 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -94,11 +93,11 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -112,11 +111,11 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -130,11 +129,11 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
-				<div class="block-content_full">
+				<div class="block-content block-content_full ">
 					<div class="block-content-header">
 						<a href="#"><h3>Название</h3></a>
 					</div>
-					<div class="block-content-description_full">
+					<div class="block-content-description">
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -148,9 +147,9 @@
 							<p>Автор: Имя</p>
 					</div>
 				</div>
+
 			</div>
 		</section>
-
 		<footer>
 			<div class="footer">
 				<img src="Source/img/Logo_tvgu_footer.png" alt="лого">
