--- a/project/index.html
+++ b/project/index.html
@@ -24,8 +24,8 @@
 					<input class="search" name="s" type="search" autocomplete="off">
 				</form>
 			<ul>
-				<li class="li"><a href="#">Статьи</a></li>
-				<li><a href="#">НПА</a></li>
+				<li class="li"><a href="articles_page.html">Статьи</a></li>
+				<li><a href="NPAs_page.html">НПА</a></li>
 				<li><a href="#">Лекции</a></li>
 				<li><a href="#">Файлы</a></li>
 			</ul>
@@ -56,7 +56,11 @@
 				</div>
 				<div class="block-content">
 					<div class="block-content-header">
-						<a href="#"><h3>Название</h3></a>
+						<a href="#">
+							<h3>
+								Профиль защиты операционных систем типа "В" четвертого класса защиты
+							</h3>
+						</a>
 					</div>
 					<div class="block-content-description">
 						<p>
@@ -103,7 +107,7 @@
 					</div>
 					<div class="block-content-description">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+							Lorem ipsum файл dolor sit amet, consectetur adipiscing elit, 
 							sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 							Ut enim ad minim veniam, 
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -184,11 +188,29 @@
 		
 		$(document).ready(function() {
 			$('input').keydown(function(e) {
-				if(e.keyCode === 13) {
-					var val = $(this).val()
-					$(":contains(" + val + ")" ).css( "color", "yellow" );
-					//$(this).val()
-				}
+				if(e.code === 'Enter') {
+					$('.block-content').html(function(index, oldValue) {
+						return oldValue.replace(new RegExp('<span style="color: yellow; font-weight: bold">', 'g'), '');
+					});
+					$('.block-content').html(function(index, oldValue) {
+						return oldValue.replace(new RegExp('</span>', 'g'), '');
+					});
+
+					var val = $(this).val();
+					if (val === '') return;
+					var isScroll = false;
+					//alert($('.block-content').html().replace(val, '<span style="color: red">' + val + '</span>'))
+					$('.block-content').html(function(index, oldValue) {
+						if(!isScroll & oldValue.indexOf(val) != -1){
+							let posY = $('.block-content:eq(' + index + ')').offset().top;
+							$('html,body').scrollTop(posY - 300);
+							isScroll = true;
+						}
+
+						return oldValue.replace(new RegExp(val, 'g'),
+						 '<span style="color: yellow; font-weight: bold">' + val + '</span>');
+					});
+				};
 			});
 		});
 	</script>
